# smashcator

./: .gitignore  Application.hs  Database.hs  Foundation.hs  Import.hs  Main.hs  Makefile  README.md  SmashDB.hs  Utils.hs  WidgetFile.hs  smashcator.cabal
Routes/: Contact.hs  EditUser.hs  Home.hs  Information.hs  Login.hs  NewTournament.hs  NewUser.hs  NotFound.hs  Tournament.hs  Tournaments.hs  User.hs  routes
templates/: contact.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.julius  edituser.hamlet  edituser.julius  edituserold.hamlet  home.hamlet  information.hamlet  login.hamlet  login.julius  newtournament.cassius  newtournament.hamlet  newtournament.julius  newtournamentold.hamlet  notfound.cassius  notfound.hamlet  tournament.cassius  tournament.hamlet  tournamentdisplay.hamlet  tournaments.cassius  tournaments.hamlet  user.hamlet
