--------------------
-- Project Config --
name:             smashcator
version:          0.0.0
synopsis:         A tournament locator for Super Smash Bros.
author:           Crockeo
maintainer:       Crockeo
category:         Web
build-type:       Simple
cabal-version: >= 1.10

------------------
-- Build Config --
executable smashcator
  default-extensions: MultiParamTypeClasses
                      OverloadedStrings
                      TemplateHaskell
                      TypeFamilies
                      QuasiQuotes

  hs-source-dirs: ./
                  Routes/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , data-default
               , shakespeare
               , bytestring
               , yesod-form
               , hashable
               , yesod
               , text

  default-language: Haskell2010
