--------------------
-- Project Config --
name:             smashcator
version:          0.0.0
synopsis:         A tournament locator for Super Smash Bros.
author:           Crockeo
maintainer:       Crockeo
category:         Web
build-type:       Simple
cabal-version: >= 1.10

------------------
-- Build Config --
executable smashcator
  default-extensions: MultiParamTypeClasses
                      OverloadedStrings
                      FlexibleContexts
                      TemplateHaskell
                      TypeFamilies
                      QuasiQuotes
                      GADTs

  hs-source-dirs: ./
                  Routes/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , persistent-template
               , persistent-sqlite
               , data-default
               , shakespeare
               , bytestring
               , persistent
               , yesod-form
               , hashable
               , yesod
               , text
               , time

  default-language: Haskell2010
